[gd_scene load_steps=3 format=3 uid="uid://cjf3l6s28jobn"]

[ext_resource type="Script" path="res://lp_4_2.gd" id="1_0ccn8"]
[ext_resource type="Theme" uid="uid://cv1o3wmjapddp" path="res://BigFont.tres" id="2_o6dy1"]

[node name="LP 4-2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ccn8")

[node name="lblWeight" type="Label" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 35.0
offset_right = 565.0
offset_bottom = 102.0
theme = ExtResource("2_o6dy1")
text = "Weight (In kilograms):"

[node name="lblLength" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 109.0
offset_right = 518.0
offset_bottom = 176.0
theme = ExtResource("2_o6dy1")
text = "Length (in centimeters):"

[node name="lblWidth" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 191.0
offset_right = 558.0
offset_bottom = 258.0
theme = ExtResource("2_o6dy1")
text = "Width (in centimeters):"

[node name="lblHeight" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 269.0
offset_right = 563.0
offset_bottom = 336.0
theme = ExtResource("2_o6dy1")
text = "Height (in centimeters):"

[node name="txtWeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 593.0
offset_top = 29.0
offset_right = 838.0
offset_bottom = 104.0
theme = ExtResource("2_o6dy1")
placeholder_text = "--"
alignment = 1

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 592.0
offset_top = 111.0
offset_right = 837.0
offset_bottom = 186.0
theme = ExtResource("2_o6dy1")
placeholder_text = "--"
alignment = 1

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 592.0
offset_top = 192.0
offset_right = 837.0
offset_bottom = 267.0
theme = ExtResource("2_o6dy1")
placeholder_text = "--"
alignment = 1

[node name="txtHeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 594.0
offset_top = 273.0
offset_right = 839.0
offset_bottom = 348.0
theme = ExtResource("2_o6dy1")
placeholder_text = "--"
alignment = 1

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 560.0
offset_right = 345.0
offset_bottom = 635.0
theme = ExtResource("2_o6dy1")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 557.0
offset_right = 731.0
offset_bottom = 632.0
theme = ExtResource("2_o6dy1")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 790.0
offset_top = 557.0
offset_right = 1111.0
offset_bottom = 632.0
theme = ExtResource("2_o6dy1")
text = "Exit"

[node name="lblOutput" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 364.0
offset_right = 1110.0
offset_bottom = 531.0
theme = ExtResource("2_o6dy1")

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
